welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
var dir =0
def hunt() {  
  while (dir !=4){
    dir = 1
    while (!isFacingTrail()){ 
    droite()
    dir = dir + 1}
    baisseBrosse()
    avance()
    leveBrosse()}

  	}
  
}

def isFacingTrail():Boolean = {
  if (!estFaceMur){
    avance()  
  	if (getCouleurSol()==Color.green){
      recule()
      return true
    }
  	else {
      recule()
      return false
    }
  }
 	else {
    return false
  }
}